--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,12 +5,8 @@ repo: monitoring # The name of this repository
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: JAportal
+    url: http://104.154.150.209:85/index
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
