--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,9 @@ sites:
     url: https://www.google.com
   - name: JAportal
     url: http://104.154.150.209:85/index
+    expectedStatusCodes:
+      - 404
+      - 200
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
